[tool.poetry]
name = "pygroundsegmentation"
version = "0.4.0"
description = ""
authors = ["JonasHablitzel <Jonas.Hablitzel@gmx.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
