[tool.poetry]
name = "pygroundsegmentation"
version = "0.4.2"
description = ""
authors = ["JonasHablitzel <Jonas.Hablitzel@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JonasHablitzel/PyGroundSegmentation"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
pylint = "^2.15.10"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
